--- a/old/style/oui.css
+++ b/old/style/oui.css
@@ -1,95 +1,4 @@
 
-.center{
-	position: absolute;
-	top: 50%;
-	left:24%;
-	transform: translate(-50%,-50%);
-}
-.img{
-	position: relative;
-	width: 630px;
-	height: 400px;
-	background-size: cover;
-	border: 2px solid #fff;
-	overflow: hidden;
-}
-
-.img img{
-	width: 100%;
-	transition: .5s;
-}
-.container{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: transparent;
-	transition: .5s;
-
-}
-
-.container:before {
-	content: '';
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	opacity: 1;
-	transform: translateX(-100%) scale(1) skew(-45deg);
-	transition: .5s;
-}
-.content{
-	position: absolute;
-	top: 50%;
-	transform: translateY(-50%);
-	padding: 30px 50px; 
-	text-align: center;
-}
-.content h1{
-	padding: 0;
-	color: #fff;
-	margin-bottom: 20px;
-	font-size: 1.5em;
-	transform: translateY(-100%) scale(0);
-	transition: .5s; 	
-}
-.content p{
-	padding:0;
-	color: #fff;
-	font-size: 1em;
-	transform: scale(2); 	
-    transition: .5s;
-    opacity: 0;  
-}
-.img:hover .content h1{
-	transform: translateY(0) scale(1);
-
-}
-.img:hover .content p{
-	transform: scale(1);
-	opacity: 1;
-}
-.img:hover img{
-	transform: scale(2) translateX(-50px);
-}
-.img:hover .container:before{
-	opacity: 1;
-	background: rgba(255,0,0,.8);
-	transform: translateX(0) scale(1) skew(-45deg);
-}
-
-
-
-
-
-
-
-
-
-
-
 .yes{
 	position: absolute;
 	top: 50%;
@@ -231,6 +140,7 @@ header::before {
 	transform: translateZ(-1px) scale(2);
 	z-index: -1;
 	min-height: 100vh;
+	height: 10%;
 
 }
 
@@ -311,7 +221,7 @@ header {
 .center{
 
 	position: absolute;
-	top: 40%;
+	top: 25%;
 	left:24%;
 	transform: translate(-50%,-50%);
 }
@@ -406,33 +316,11 @@ header {
 
 .yes{
 	position: absolute;
-	top: 40%;
+	top: 25%;
 	left:74%;
 	transform: translate(-50%,-50%);
 }
-.img1{
-	position: relative;
-	width: 690px;
-	height: 400px;
-	background-size: cover;
-	border: 2px solid #fff;
-	overflow: hidden;
-}
 
-.img1 img{
-	width: 100%;
-	transition: .5s;
-}
-.contain{
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	background: transparent;
-	transition: .5s;
-
-}
 
 .contain:before {
 	content: '';
@@ -487,6 +375,7 @@ header {
 
 p.os{
 	margin-top: 100px;
+	padding-top: 150px;
 	font-size: 40px;
 	color: orange;
 }
@@ -494,6 +383,7 @@ p.os{
 p.ss{
 	font-family: algerian;
 	margin-top:0px;
+	padding-top: 10px;
 	font-size: 30px;
 	color: yellow;
 }
