--- a/old/VUE JS/daniel/stage_app.css
+++ b/old/VUE JS/daniel/stage_app.css
@@ -29,6 +29,97 @@ div {
     flex:2 1;
 }
 
+.button-navigation {
+    color: white;
+    text-decoration: none;
+    font-weight: bold;
+    border: 1px white solid;
+    font-size: 15px;
+    padding: 10px;
+    border-radius: 10px;
+}
+
+.button-navigation:hover{
+    background-color: red;
+}
+
+
+.login{
+            width: 320px;
+            height:420px;
+            background: rgb(0, 0, 0, 0.5);
+            color: #fff;
+            top:50%;
+            left: 50%;
+            position: absolute;
+            transform: translate(-50%,-50%);
+            box-sizing: border-box;
+            padding: 70px 30px;
+        }
+
+        .avatar{
+            width: 100px;
+            height: 100px;
+            position: absolute;
+            top: -50px;
+            left: calc(50% - 50px);
+        }
+
+        h1{
+            margin:0;
+            padding: 0 0 20px;
+            text-align: center;
+            font-size: 22px; 
+        }
+
+        .login p{
+            margin: 0;
+            padding: 0;
+            font-weight: bold;
+
+        }
+
+        .login input{
+            width: 100%;
+            margin-bottom: 20px;
+        }
+
+        .login input[type="text"], input[type="password"] {
+            border:none;
+            border-bottom: 1px solid #fff;
+            background:transparent;
+            outline: none;
+            height: 40px;
+            color: #fff;
+            font-size: 16px;
+        }
+
+        .login input[type="submit"]{
+            border:none;
+            outline: none;
+            height: 40px;
+            background: #1c8adb;
+            font-size: 18px;
+            border-radius: 20px;
+        }
+
+        .login input[type="submit"]:hover{
+            cursor: pointer;
+            background:#39dc79;
+            color: #000;
+        }
+
+        .login a{
+            text-decoration: none;
+            font-size: 14px;
+            color: #fff;
+        }
+
+        .login a:hover{
+            color: #39dc79;
+        }
+      
+
 
 
 
