--- a/old/VUE JS/daniel/stage_app.css
+++ b/old/VUE JS/daniel/stage_app.css
@@ -44,81 +44,124 @@ div {
 }
 
 
+section {
+    position: relative;
+    width: 100%; 
+    height: 100vh;
+    overflow: hidden; 
+
+}
+
+section.first{
+    background:#262626; 
+
+}
+
+section.second{
+    background:#fff; 
+}
+
+section.last{
+    background:#262626; 
+}
+
+.new{
+    padding: 50px;
+    margin-top: 535px;
+    margin-left: 0px;  
+    border-width: 100px 0 0 1400px;
+    border-color: transparent transparent transparent #fff;
+    border-style: solid;
+}
+
+.new2{
+    margin-left: 0px;
+    margin-top: 0px;
+    padding: 50px;
+    width: 1200px;
+    border-color: transparent transparent transparent #fff ;
+    border-width: 0 0 100px 1400px;
+    border-style: solid ;
+}
+
+
+
+
 .login{
-            width: 320px;
-            height:420px;
-            background: rgb(0, 0, 0, 0.5);
-            color: #fff;
-            top:50%;
-            left: 50%;
-            position: absolute;
-            transform: translate(-50%,-50%);
-            box-sizing: border-box;
-            padding: 70px 30px;
-        }
+    width: 320px;
+    height:420px;
+    background: rgb(0, 0, 0, 0.5);
+    color: #fff;
+    top:50%;
+    left: 50%;
+    position: absolute;
+    transform: translate(-50%,-50%);
+    box-sizing: border-box;
+    padding: 70px 30px;
+}
 
-        .avatar{
-            width: 100px;
-            height: 100px;
-            position: absolute;
-            top: -50px;
-            left: calc(50% - 50px);
-        }
+.avatar{
+    width: 100px;
+    height: 100px;
+    position: absolute;
+    top: -50px;
+    left: calc(50% - 50px);
+}
 
-        h1{
-            margin:0;
-            padding: 0 0 20px;
-            text-align: center;
-            font-size: 22px; 
-        }
+h1{
+    margin:0;
+    padding: 0 0 20px;
+    text-align: center;
+    font-size: 22px; 
+}
 
-        .login p{
-            margin: 0;
-            padding: 0;
-            font-weight: bold;
+.login p{
+    margin: 0;
+    padding: 0;
+    font-weight: bold;
 
-        }
+}
 
-        .login input{
-            width: 100%;
-            margin-bottom: 20px;
-        }
+.login input{
+    width: 100%;
+    margin-bottom: 20px;
+}
 
-        .login input[type="text"], input[type="password"] {
-            border:none;
-            border-bottom: 1px solid #fff;
-            background:transparent;
-            outline: none;
-            height: 40px;
-            color: #fff;
-            font-size: 16px;
-        }
+.login input[type="text"], input[type="password"] {
+    border:none;
+    border-bottom: 1px solid #fff;
+    background:transparent;
+    outline: none;
+    height: 40px;
+    color: #fff;
+    font-size: 16px;
+}
 
-        .login input[type="submit"]{
-            border:none;
-            outline: none;
-            height: 40px;
-            background: #1c8adb;
-            font-size: 18px;
-            border-radius: 20px;
-        }
+.login input[type="submit"]{
+    border:none;
+    outline: none;
+    height: 40px;
+    background: #1c8adb;
+    font-size: 18px;
+    border-radius: 20px;
+}
 
-        .login input[type="submit"]:hover{
-            cursor: pointer;
-            background:#39dc79;
-            color: #000;
-        }
+.login input[type="submit"]:hover{
+    cursor: pointer;
+    background:#39dc79;
+    color: #000;
+}
 
-        .login a{
-            text-decoration: none;
-            font-size: 14px;
-            color: #fff;
-        }
+.login a{
+    text-decoration: none;
+    font-size: 14px;
+    color: #fff;
+}
 
-        .login a:hover{
-            color: #39dc79;
-        }
-      
+.login a:hover{
+    color: #39dc79;
+}
+
 
 
 
